--- a/src/ejercicio-2/Makefile
+++ b/src/ejercicio-2/Makefile
@@ -8,17 +8,17 @@ raspberry : cliente_r servidor_r tarea
 time_clnt.c time_svc.c: time.x
 	rpcgen -C time.x
 
-client_r : time_client.c time_clnt.c
-	gcc -lnsl -o client_r time_client.c time_clnt.c
+client_r : client.c time_clnt.c
+	gcc -lnsl -o client_r client.c time_clnt.c
 
-server_r : time_server.c time_svc.c 
-	gcc -lnsl -o server_r time_server.c time_svc.c
+server_r : server.c time_svc.c 
+	gcc -lnsl -o server_r server.c time_svc.c
 
-client : time_client.c time_clnt.c 
-	gcc -ltirpc -I/usr/include/tirpc -o client time_client.c time_clnt.c 
+client : client.c time_clnt.c 
+	gcc -ltirpc -I/usr/include/tirpc -o client client.c time_clnt.c 
 
-server : time_server.c time_svc.c 
-	gcc -ltirpc -I/usr/include/tirpc -o server time_server.c time_svc.c 
+server : server.c time_svc.c 
+	gcc -ltirpc -I/usr/include/tirpc -o server server.c time_svc.c 
 
 tarea: tarea.c
 	gcc -o tarea tarea.c
