--- a/src/ejercicio-6/Makefile
+++ b/src/ejercicio-6/Makefile
@@ -1,4 +1,4 @@
-all: cliente servidor
+all: cliente servidor servidor_agencia_b
 .PHONY: all
 .CLEAN: all
 
@@ -8,5 +8,8 @@ cliente: cliente.c
 servidor : servidor.c
 	gcc -o servidor servidor.c
 
+servidor_agencia_b : servidor_agencia_b.c
+	gcc -o servidor_agencia_b servidor_agencia_b.c
+
 clean:
-	rm cliente; rm servidor
+	rm cliente; rm servidor; rm servidor_agencia_b;
